--- a/scss/partials/_main.scss
+++ b/scss/partials/_main.scss
@@ -65,7 +65,7 @@
     }
 }
 
-/* ------------------ HTML CABNAHUEL ---------------------*/
+/* ------------------ HTMLS CABAÑAS ---------------------*/
 
 .abs{
     position: absolute;
@@ -124,3 +124,4 @@ h3{
     margin-left: 10%;
 }
 
+/**/
