--- a/css/styles.css
+++ b/css/styles.css
@@ -221,7 +221,7 @@ h3 {
   .icons {
     display: flex;
     flex-direction: row;
-    justify-content: center; }
+    justify-content: space-around; }
   /* line 15, ../../../Desktop/terceraEntrega/scss/partials/_mediaqueries.scss */
   .services {
     display: flex;
