--- a/scss/partials/_mediaqueries.scss
+++ b/scss/partials/_mediaqueries.scss
@@ -10,7 +10,7 @@
     .icons{
         display: flex;
         flex-direction: row;
-        justify-content: center;
+        justify-content: space-around;
     }
     .services{
         display: flex;
