--- a/scss/partials/_reset.scss
+++ b/scss/partials/_reset.scss
@@ -3,4 +3,6 @@ body{
     overflow-x: hidden!important;
     box-sizing: border-box;
     background-color: $colorOne;
+    width: 100%!important;
+    float: left!important;
 }
