--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,6 +1,6 @@
                     //variables//
 
-$mainFont:"Rubik", sans-serif;
+$mainFont:"Roboto", sans-serif;
 $colorOne:#fff; 
 $mainWeight:600;
 
