--- a/scss/partials/_mediaqueries.scss
+++ b/scss/partials/_mediaqueries.scss
@@ -40,13 +40,10 @@
     #carrouselCard{
         object-fit: cover;
     }  
-    #h2{
-        padding-top: 100px !important;
-        padding-bottom: 100px !important; 
-    }
+
     #h22{
-        padding-top: 100px !important;
-        padding-bottom: 100px !important; 
+        padding-top: 50px !important;
+        padding-bottom: 50px !important; 
     }
     #h2ex{
         padding-top: 100px!important;        
@@ -65,10 +62,10 @@
         height: 600px!important;
     }
     #bodyCard p{
-        padding:50px ;
+        padding:55px ;
     }
     #bodyCard h5{
-        margin-top: 43px;
+        margin-top: 45px;
     }
     #cardEx{
         height: 600px;
@@ -108,7 +105,7 @@
             }
     }
     .p{
-        width: 80%;
+        width: 80%!important;
         text-align: center;
         margin: auto;
     }
