--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,37 @@ label {
     height: 400px;
     object-fit: cover; }
 
-/* line 11, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
+/* line 10, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
+h1, h2, h3, h4, h5 {
+  font-family: 'Cormorant Garamond', serif; }
+
+/* line 13, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
+button {
+  font-family: "Roboto", sans-serif; }
+
+/* line 16, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
+#btnunits {
+  width: 100%;
+  display: flex;
+  justify-content: center; }
+  /* line 20, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
+  #btnunits .btn {
+    width: 20%;
+    height: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-family: "Roboto", sans-serif;
+    font-size: 22px;
+    color: white;
+    background-color: #6c757d; }
+    /* line 30, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
+    #btnunits .btn:hover {
+      color: #6c757d;
+      background-color: white;
+      border-color: #6c757d; }
+
+/* line 38, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
 .pm {
   width: 80%;
   margin: auto;
@@ -51,59 +81,59 @@ label {
   font-weight: 600;
   color: gray; }
 
-/* line 19, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
+/* line 46, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
 #cardEx {
   height: 400px;
   object-fit: cover;
   object-position: 50% 50%; }
 
-/* line 25, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
+/* line 52, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
 #h4 {
   width: 90%;
   text-align: center;
   align-items: center;
   margin-left: 5%; }
 
-/* line 31, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
+/* line 58, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
 #h5 {
   width: 90%;
   text-align: center;
   align-items: center;
   margin-left: 5%; }
 
-/* line 38, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
+/* line 65, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
 #card {
   transition: all 0.5s; }
-  /* line 41, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
+  /* line 68, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
   #card .card-title {
     font-weight: 600; }
-  /* line 45, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
+  /* line 72, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
   #card:hover {
     transform: scale(1.05);
     z-index: 1; }
 
-/* line 51, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
+/* line 78, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
 #ubiTitle {
   font-weight: 600; }
 
 /* ----------  HTML UNITS ------- */
-/* line 58, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
+/* line 85, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
 .breadcrumb {
   margin-left: 30px; }
 
-/* line 63, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
+/* line 90, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
 .card .card-title, .card .card-header {
   font-weight: 600; }
 
-/* line 68, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
+/* line 95, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
 .carrousel2 {
   height: 300px; }
-  /* line 70, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
+  /* line 97, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
   .carrousel2 img {
     height: 300px; }
 
 /* ------------------ HTMLS CABAÑAS ---------------------*/
-/* line 77, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
+/* line 104, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
 .abs {
   position: absolute;
   top: 15%;
@@ -112,49 +142,49 @@ label {
   font-weight: 600;
   font-size: 45px;
   font-family: 'Roboto', sans-serif; }
-  /* line 85, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
+  /* line 112, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
   .abs h2 {
     font-size: 25px; }
 
-/* line 90, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
+/* line 117, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
 .icons h2 {
   color: gray;
   font-size: 25px; }
 
-/* line 94, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
+/* line 121, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
 .icons h3 {
   color: gray;
   font-size: 20px !important; }
 
-/* line 99, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
+/* line 126, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
 .info {
   font-size: 30px !important;
   color: #333333;
   font-weight: 600; }
 
-/* line 105, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
+/* line 132, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
 h2 {
   font-size: 36px;
   font-weight: 300; }
 
-/* line 109, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
+/* line 136, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
 h3 {
   color: gray;
   font-size: 22px !important;
   font-weight: 600 !important; }
 
-/* line 114, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
+/* line 141, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
 .infor {
   display: flex;
   flex-direction: row;
   text-align: left;
   align-items: center; }
-  /* line 119, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
+  /* line 146, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
   .infor p {
     margin: 0;
     padding-left: 20px; }
 
-/* line 125, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
+/* line 152, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
 .services {
   display: flex;
   flex-direction: column;
