--- a/scss/partials/_main.scss
+++ b/scss/partials/_main.scss
@@ -18,13 +18,14 @@ button{
     display: flex;
     justify-content: center;
     .btn{
-        width: 20%;
+        width: 80%;
         height: 40px;
         display: flex;
         flex-direction: column;
         justify-content: center;
         font-family: $mainFont;
-        font-size: 22px;
+        font-size: 20px;
+        margin-bottom: 20px;
         color: white;
         background-color: #6c757d;
         &:hover{
@@ -86,7 +87,6 @@ button{
     margin-left: 30px;
 }
 .card{
-
     .card-title, .card-header{
         font-weight:$mainWeight;
     }
@@ -154,8 +154,35 @@ h3{
     flex-direction: column;
     margin-left: 10%;
 }
-/*.navbar{
-    background-color: #C3B091;
-}*/
 
-/**/
+/*----------HTML ACTIVITIES--------*/
+.max{  
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0;
+    overflow-x: hidden;
+    .contenedor{
+        background-color: aqua;
+        width: 350px;
+        height: 500px;
+        border-radius: 10px;
+        margin-bottom: 20px;
+        img{
+            width: 350px;
+            height: 450px;
+            object-fit: cover;
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
+        }
+        h2{
+            font-family: $mainFont;
+            font-size: 26px;
+            font-weight: $mainWeight;
+            margin-top: 5px;
+        }
+        .modal{
+            top: 20% !important;; 
+         }
+    }
+}
